--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="img/AY.png" alt=""></a>
+            <a href="index.html"><img src="img/KPK.png" alt=""></a>
             <img src="img/bars.png" id="bars" alt="menu">
             <div class="nav-links" id="navLinks">
                 <ul>
