--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 <div>
                     <img src="img/email.png" alt="">
                     <span>
-                        <h5>elegant2003@gmail.com</h5>
+                        <h5>kpk2023@gmail.com</h5>
                         <p>Feel free to email</p>
                     </span>
                 </div>
