--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Programmes -->
     <section class="programmes">
         <h1>Degrees We Offer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, illum!</p>
+        <!-- <p>We are currently offering four degrees. They are as follows:</p> -->
 
         <div class="row">
             <div class="pro-col">
@@ -60,7 +60,7 @@
     <!-- Faculties -->
     <section class="faculty">
         <h1>Our Faculties</h1>
-        <p>Below are the various faculties we have in our school.</p>
+        <!-- <p>Below are the various faculties we have in our school.</p> -->
 
         <div class="row">
             <div class="faculty-col">
@@ -78,7 +78,7 @@
             <div class="faculty-col">
                 <img src="img/youth.jpg" alt="">
                 <div class="layer">
-                    <h3>COMMUNICATION AND INFORMATION SCIENCES</h3>
+                    <h3>CIS</h3>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="faculty-col">
                 <img src="img/youth.jpg" alt="">
                 <div class="layer">
-                    <h3>COMMUNICATION AND INFORMATION SCIENCES</h3>
+                    <h3>CIS</h3>
                 </div>
             </div>
         </div>
