--- a/abt.html
+++ b/abt.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="about-col">
                 <h1>Our Mission</h1>
-                <p>Our goal as a school is to equip our students with the right knowledge and mindset to thrive and then provide sound solutions to problems facing the world.</p>
+                <p>Our aim as a school is to equip our students with the right knowledge and mindset to thrive and then provide sound solutions to problems facing the world.</p>
             </div>
             <div class="about-col">
                 <h1>Our Vision</h1>
