--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </nav>
 
         <div class="text-box">
-            <h1>Welcome To Elegant University</h1>
-            <p>Creating websites is now probably one of the easiest things to do now. <br>You kinda just need to learn HTML, CSS and JavaScript. Apply creativity also.</p>
+            <h1>Welcome To Kaypikay University</h1>
+            <p>"A little progress each day adds up to big results." - Satya Nani</p>
             <a href="abt.html" class="hero-btn">Wanna know more?</a>
         </div>
     </section>
