--- a/reg.html
+++ b/reg.html
@@ -29,7 +29,7 @@
 
     <!-- Registration Field -->
     <section class="container">
-        <section class="sub-container">
+        <section class="sub-container" id="move1">
         <h1 class="title">Applicant Information</h1>
         <form action="#">
             <div class="part1">
@@ -116,6 +116,77 @@
             </div>
         </form>
         </section>
+
+        <!-- <section class="sub-container" id="move2">
+        <h1 class="title">Parental Information</h1>
+        <form action="#">
+            <div class="part1">
+                <div class="input-box">
+                    <input type="text" id="full" placeholder="Full name of parent..." required>
+                </div>
+                <div class="input-box">
+                    <input type="email" id="email2" placeholder="Email of next of kin..." required>
+                </div>
+                <div class="input-box">
+                    <input type="tel" id="no2" placeholder="Phone number of next of kin..." required>
+                </div>
+                <div class="input-box">
+                    <select id="state2" required>
+                        <option value="" disabled selected hidden>--select your state--</option>
+                        <option value="abia">Abia</option>
+                        <option value="adamawa">Adamawa</option>
+                        <option value="akwaIbom">Akwa Ibom</option>
+                        <option value="anambra">Anambra</option>
+                        <option value="bauchi">Bauchi</option>
+                        <option value="bayelsa">Bayelsa</option>
+                        <option value="benue">Benue</option>
+                        <option value="borno">Borno</option>
+                        <option value="crossRiver">Cross River</option>
+                        <option value="delta">Delta</option>
+                        <option value="ebonyi">Ebonyi</option>
+                        <option value="edo">Edo</option>
+                        <option value="ekiti">Ekiti</option>
+                        <option value="enugu">Enugu</option>
+                        <option value="fct">FCT</option>
+                        <option value="gombe">Gombe</option>
+                        <option value="imo">Imo</option>
+                        <option value="jigawa">Jigawa</option>
+                        <option value="kaduna">Kaduna</option>
+                        <option value="kano">Kano</option>
+                        <option value="katsina">Katsina</option>
+                        <option value="kebbi">Kebbi</option>
+                        <option value="kogi">Kogi</option>
+                        <option value="kwara">Kwara</option>
+                        <option value="lagos">Lagos</option>
+                        <option value="nasarawa">Nasarawa</option>
+                        <option value="niger">Niger</option>
+                        <option value="ogun">Ogun</option>
+                        <option value="ondo">Ondo</option>
+                        <option value="osun">Osun</option>
+                        <option value="oyo">Oyo</option>
+                        <option value="plateau">Plateau</option>
+                        <option value="rivers">Rivers</option>
+                        <option value="sokoto">Sokoto</option>
+                        <option value="taraba">Taraba</option>
+                        <option value="yobe">Yobe</option>
+                        <option value="zamfara">Zamfara</option>
+                    </select>
+                </div>
+                <div class="input-box">
+                    <input type="text" id="occ" placeholder="Occupation" required>
+                </div>
+                <div class="input-box">
+                    <textarea name="Address" id="add2" rows="2" placeholder="Your address"></textarea>
+                </div>
+
+            </div>
+            
+            <div>
+                <button type="button" id="back1" class="hero-btn btn-box see">BACK</button>
+                <button type="button" id="next2" class="hero-btn btn-box see">NEXT</button>
+            </div>
+        </form>
+        </section> -->
     </section>
         
         <!-- <div class="form-box"  id="form3">
