--- a/reg.html
+++ b/reg.html
@@ -34,16 +34,19 @@
         <form action="#">
             <div class="part1">
                 <div class="input-box">
-                    <input type="text" id="first1" name="first1" placeholder="Enter first name...">
+                    <input type="text" id="first1" name="first1" placeholder="Enter first name..." required>
                 </div>
                 <div class="input-box">
-                    <input type="text" id="last1" name="last1" placeholder="Enter last name...">
+                    <input type="text" id="last1" name="last1" placeholder="Enter last name..." required>
+                </div>
+                <div class="input-box">
+                    <input type="text" id="email1" name="email1" placeholder="Enter your email..." required>
                 </div>
                 <div class="input-box">
                     <input type="tel" id="no1" name="no1" placeholder="Enter phone number...">
                 </div>
                 <div class="input-box">
-                    <input type="date" id="dob" name="dob" placeholder="Enter date of birth...">
+                    <input type="text" id="dob" name="dob" placeholder="Enter date of birth..." onfocus="(this.type='date')">
                 </div>
                 <div class="input-box">
                     <input type="number" id="age" name="age" placeholder="Enter your age...">
@@ -117,7 +120,7 @@
         </form>
         </section>
 
-        <!-- <section class="sub-container" id="move2">
+        <section class="sub-container" id="move2">
         <h1 class="title">Parental Information</h1>
         <form action="#">
             <div class="part1">
@@ -186,7 +189,7 @@
                 <button type="button" id="next2" class="hero-btn btn-box see">NEXT</button>
             </div>
         </form>
-        </section> -->
+        </section>
     </section>
         
         <!-- <div class="form-box"  id="form3">
