--- a/reg.html
+++ b/reg.html
@@ -29,7 +29,7 @@
 
     <!-- Registration Field -->
     <section class="container">
-        <!-- <section class="sub-container" id="move1">
+        <section class="sub-container" id="move1">
         <h1 class="title">Applicant Information</h1>
         <form action="#">
             <div class="part1">
@@ -118,7 +118,7 @@
                 <button type="button" id="next1" class="hero-btn btn-box">NEXT</button>
             </div>
         </form>
-        </section> -->
+        </section>
 
         <section class="sub-container" id="move2">
         <h1 class="title">Parental Information</h1>
